--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "next lint",
     "postbuild": "next-sitemap"
@@ -12,7 +12,6 @@
   "dependencies": {
     "@docsearch/css": "^4.3.2",
     "@docsearch/react": "^3.9.0",
-    "@netlify/plugin-nextjs": "^5.11.3",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-collapsible": "^1.1.0",
@@ -41,12 +40,13 @@
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.15.1",
     "@tailwindcss/typography": "^0.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9.29.0",
-    "eslint-config-next": "15.3.4",
+    "eslint-config-next": "16.0.10",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
